# Medoh-Test-Backend

./: pyproject.toml
app/: db.py  docker-compose.yml  main.py
app/crud/: __init__.py  doctor.py  video.py
app/models/: doctor.py  video.py
app/routes/: doctor.py  router.py  video.py
