[tool.poetry]
name = "medoh-backend"
version = "0.1.0"
description = ""
authors = ["SSewpaul <ssewpaul@scu.edu>"]
readme = "README.md"
packages = [{include = "medoh_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
psycopg2 = "^2.9.9"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
